fixed button alignments

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -148,7 +148,7 @@
 .team-content2 {
     position: absolute;
     bottom: 15px;
-    left: 0;
+    left: -10px;
     right: 0;
     width: 100%;
     text-align: center;
